[gd_scene load_steps=11 format=2]

[ext_resource path="res://Summoner.gd" type="Script" id=1]
[ext_resource path="res://Assets/Sumonerl-16.png.png" type="Texture" id=2]
[ext_resource path="res://Assets/Sumonerl-17.png.png" type="Texture" id=3]
[ext_resource path="res://Assets/Sumoner14.png.png" type="Texture" id=4]
[ext_resource path="res://Assets/Sumoner-15.png.png" type="Texture" id=5]
[ext_resource path="res://Components/MovementManager.tscn" type="PackedScene" id=6]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ), ExtResource( 5 ), ExtResource( 2 ), ExtResource( 3 ) ],
"loop": true,
"name": "Summon",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=2]
radius = 21.0238

[sub_resource type="CircleShape2D" id=3]
radius = 301.007

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 158, 10 )

[node name="Summoner" type="KinematicBody2D"]
collision_layer = 8
collision_mask = 15
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="AnimatedSprite" parent="."]
position = Vector2( 15, 4.9 )
rotation = 1.5708
scale = Vector2( 0.1, 0.1 )
frames = SubResource( 1 )
animation = "Idle"
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="Attack_Speed_Timer" type="Timer" parent="."]
wait_time = 3.0

[node name="sense" type="Area2D" parent="."]
scale = Vector2( 0.996781, 1 )
collision_layer = 0
collision_mask = 2

[node name="sensor" type="CollisionShape2D" parent="sense"]
shape = SubResource( 3 )

[node name="line_of_fire" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="line_of_fire"]
position = Vector2( 148, 0 )
shape = SubResource( 4 )

[node name="MovementManager" parent="." instance=ExtResource( 6 )]

[connection signal="shooting_completed" from="." to="." method="_on_Summoner_shooting_completed"]
[connection signal="timeout" from="Attack_Speed_Timer" to="." method="_on_Attack_Speed_Timer_timeout"]
[connection signal="body_entered" from="sense" to="." method="_on_sense_body_entered"]
[connection signal="body_exited" from="sense" to="." method="_on_sense_body_exited"]
[connection signal="body_entered" from="line_of_fire" to="." method="_on_line_of_fire_body_entered"]
[connection signal="body_exited" from="line_of_fire" to="." method="_on_line_of_fire_body_exited"]
